--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3",
+    "mysql2": "^3.9.7",
     "sequelize": "^6.25.3",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
